updating nav element

--- a/Part-3/Product Landing Page/Page.html
+++ b/Part-3/Product Landing Page/Page.html
@@ -5,6 +5,15 @@
     </head>
 
     <body>
+        <header id="header">
+            <img width="200" height="200px"  id="header-img" src="https://static.vecteezy.com/system/resources/thumbnails/027/127/493/small_2x/microsoft-logo-microsoft-icon-transparent-free-png.png">
+
+            <nav id="nav-bar">
+                
+            </nav>
+
+
+        </header>
         
     </body>
 </html>
